[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/theme/font_title.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/theme/font_body.tres" type="DynamicFont" id=2]
[ext_resource path="res://game/gui/pause_gui.gd" type="Script" id=3]
[ext_resource path="res://game/gui/pause_gui_settings.gd" type="Script" id=5]
[ext_resource path="res://assets/theme/theme_lerimama.tres" type="Theme" id=6]
[ext_resource path="res://assets/atlas_gui.png" type="Texture" id=7]
[ext_resource path="res://_helpers/_help_gui_guide.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/theme/fonts/Habbo.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://game/gui/game_outline.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxFlat" id=330]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=328]
size = 24
extra_spacing_top = 8
extra_spacing_bottom = -3
font_data = ExtResource( 9 )

[sub_resource type="AtlasTexture" id=329]
atlas = ExtResource( 7 )
region = Rect2( 0, 160, 16, 16 )
margin = Rect2( -3, -5, 0, 0 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 592, 224 )
theme = ExtResource( 6 )
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 360.0, 96.0, 624.0 ],
"_edit_vertical_guides_": [ 640.0, 1064.0, 216.0, 956.0 ]
}

[node name="Background" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.901961 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="__help_gui_guide" parent="." instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Title" type="Label" parent="."]
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -328.0
margin_top = 86.0
margin_right = 328.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 1 )
text = "%Game title"
align = 1
uppercase = true

[node name="Settings" type="Panel" parent="."]
self_modulate = Color( 0.137255, 0.137255, 0.137255, 1 )
margin_left = 848.0
margin_top = 184.0
margin_right = 1064.0
margin_bottom = 536.0
grow_horizontal = 2
rect_min_size = Vector2( 207, 152 )
custom_styles/panel = SubResource( 330 )
script = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="GameMusicBtn" type="CheckButton" parent="Settings"]
margin_left = 24.0
margin_top = 9.0
margin_right = 192.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 32 )
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../TouchSensSlider")
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
pressed = true
text = "MUSIC"
__meta__ = {
"_editor_description_": ""
}

[node name="GameMusicSlider" type="HSlider" parent="Settings"]
margin_left = 24.0
margin_top = 75.0
margin_right = 192.0
margin_bottom = 107.0
rect_min_size = Vector2( 0, 32 )
rect_pivot_offset = Vector2( -48, 45 )
focus_neighbour_bottom = NodePath("../GameSfxBtn")
mouse_default_cursor_shape = 2
size_flags_vertical = 8
min_value = -30.0
max_value = 10.0
step = 5.0
value = -5.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Settings/GameMusicSlider"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -35.0
margin_right = 83.0
margin_bottom = -13.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "MUSIC VOLUME"

[node name="Tick" type="Polygon2D" parent="Settings/GameMusicSlider"]
show_behind_parent = true
position = Vector2( 99, 12 )
color = Color( 0.513726, 0.513726, 0.513726, 1 )
polygon = PoolVector2Array( 0, 8, 0, 0, 8, 0, 8, 8 )

[node name="GameSfxBtn" type="CheckButton" parent="Settings"]
margin_left = 24.0
margin_top = 113.0
margin_right = 192.0
margin_bottom = 145.0
rect_min_size = Vector2( 0, 32 )
rect_pivot_offset = Vector2( 20, 16 )
focus_neighbour_left = NodePath("../GameSfxBtn")
focus_neighbour_top = NodePath("../GameMusicSlider")
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
pressed = true
text = "GAME SFX"

[node name="CameraShakeBtn" type="CheckButton" parent="Settings"]
margin_left = 24.0
margin_top = 153.0
margin_right = 192.0
margin_bottom = 185.0
rect_min_size = Vector2( 0, 32 )
rect_pivot_offset = Vector2( -62, -22 )
focus_neighbour_left = NodePath(".")
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 2 )
pressed = true
text = "CAMERA SHAKE"

[node name="BrightnessSlider" type="HSlider" parent="Settings"]
margin_left = 24.0
margin_top = 230.0
margin_right = 192.0
margin_bottom = 240.0
focus_neighbour_left = NodePath(".")
mouse_default_cursor_shape = 2
size_flags_vertical = 8
min_value = 0.6
max_value = 1.2
step = 0.05
value = 1.0
__meta__ = {
"_edit_group_": true
}

[node name="Tick" type="Polygon2D" parent="Settings/BrightnessSlider"]
show_behind_parent = true
position = Vector2( 106, 1 )
color = Color( 0.513726, 0.513726, 0.513726, 1 )
polygon = PoolVector2Array( 0, 8, 0, 0, 8, 0, 8, 8 )

[node name="Label" type="Label" parent="Settings/BrightnessSlider"]
margin_top = -30.0
margin_right = 167.0
margin_bottom = -8.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Brightness"
uppercase = true

[node name="TouchPopUpBtn" type="Button" parent="Settings"]
margin_left = 24.0
margin_top = 256.0
margin_right = 192.0
margin_bottom = 304.0
grow_horizontal = 2
focus_neighbour_left = NodePath(".")
focus_neighbour_bottom = NodePath("../TouchSensSlider")
custom_constants/hseparation = 8
custom_fonts/font = SubResource( 328 )
text = "TOUCH CONTROLS
%sTTONS"
icon = SubResource( 329 )
align = 0
icon_align = 2

[node name="TouchSensSlider" type="HSlider" parent="Settings"]
margin_left = 24.0
margin_top = 318.0
margin_right = 192.0
margin_bottom = 328.0
focus_neighbour_left = NodePath(".")
mouse_default_cursor_shape = 2
size_flags_vertical = 8
max_value = 0.2
step = 0.02
value = 0.1
__meta__ = {
"_edit_group_": true
}

[node name="Tick" type="Polygon2D" parent="Settings/TouchSensSlider"]
show_behind_parent = true
position = Vector2( 80, 1 )
color = Color( 0.513726, 0.513726, 0.513726, 1 )
polygon = PoolVector2Array( 0, 8, 0, 0, 8, 0, 8, 8 )

[node name="Label" type="Label" parent="Settings/TouchSensSlider"]
visible = false
margin_top = -27.0
margin_right = 167.0
margin_bottom = -5.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Touch sensibility"
align = 1
uppercase = true

[node name="TouchControllerPopup" type="PopupMenu" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/vseparation = 48
popup_exclusive = true

[node name="Background" type="ColorRect" parent="TouchControllerPopup"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -736.0
margin_top = -364.0
margin_right = 736.0
margin_bottom = 364.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.768627 )

[node name="Menu" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = 254.0
margin_right = 151.0
margin_bottom = 276.0
grow_horizontal = 2
theme = ExtResource( 6 )
custom_constants/separation = 32
__meta__ = {
"_edit_group_": true
}

[node name="QuitBtn" type="Button" parent="Menu"]
margin_right = 52.0
margin_bottom = 22.0
mouse_default_cursor_shape = 2
size_flags_vertical = 0
text = "QUIT"

[node name="PlayBtn" type="Button" parent="Menu"]
margin_left = 84.0
margin_right = 172.0
margin_bottom = 22.0
mouse_default_cursor_shape = 2
size_flags_vertical = 0
text = "RESUME"

[node name="RestartBtn" type="Button" parent="Menu"]
margin_left = 204.0
margin_right = 302.0
margin_bottom = 22.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 0
text = "RESTART"

[node name="GameOutline" parent="." instance=ExtResource( 11 )]
margin_left = -424.0
margin_right = 200.0

[node name="Record" parent="GameOutline" index="0"]
margin_right = 286.0

[node name="RecordTitle" parent="GameOutline/Record/VBoxContainer" index="0"]
margin_right = 255.0

[node name="RecordLabel" parent="GameOutline/Record/VBoxContainer" index="1"]
margin_right = 255.0

[node name="RecordOwner" parent="GameOutline/Record/VBoxContainer" index="2"]
margin_right = 255.0

[node name="Shortcuts" parent="GameOutline" index="3"]
margin_left = 294.0
margin_right = 624.0

[node name="Controls" parent="GameOutline" index="4"]
margin_right = 624.0

[connection signal="toggled" from="Settings/GameMusicBtn" to="Settings" method="_on_GameMusicBtn_toggled"]
[connection signal="value_changed" from="Settings/GameMusicSlider" to="Settings" method="_on_GameMusicSlider_value_changed"]
[connection signal="toggled" from="Settings/GameSfxBtn" to="Settings" method="_on_GameSfxBtn_toggled"]
[connection signal="toggled" from="Settings/CameraShakeBtn" to="Settings" method="_on_CameraShakeBtn_toggled"]
[connection signal="value_changed" from="Settings/BrightnessSlider" to="Settings" method="_on_BrightnessSlider_value_changed"]
[connection signal="pressed" from="Settings/TouchPopUpBtn" to="Settings" method="_on_TouchPopUpBtn_pressed"]
[connection signal="value_changed" from="Settings/TouchSensSlider" to="Settings" method="_on_TouchSensSlider_value_changed"]
[connection signal="id_focused" from="TouchControllerPopup" to="Settings" method="_on_TouchControllerPopup_id_focused"]
[connection signal="index_pressed" from="TouchControllerPopup" to="Settings" method="_on_TouchControllerPopup_index_pressed"]
[connection signal="pressed" from="Menu/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="Menu/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="Menu/RestartBtn" to="." method="_on_RestartBtn_pressed"]

[editable path="GameOutline"]
